@@ -1,4 +1,4 @@
-# LogicTest: local local-opt
+# LogicTest: local local-opt local-parallel-stmts fakedist fakedist-opt fakedist-metadata
 
 query T
 SHOW bytea_output
@@ -99,10 +99,11 @@ SELECT '日本語':::STRING::BYTES::STRING
 ----
 \346\227\245\346\234\254\350\252\236
 
+subtest Regression_25841
+
 statement ok
 set bytea_output = hex
 
-# Regression test for #25841.
 query T
 SELECT e'a\\\\b'::STRING::BYTEA
 ----
@@ -118,3 +119,27 @@ SELECT e'a\\bcde'::STRING::BYTEA
 
 query error bytea encoded value ends with incomplete escape sequence
 SELECT e'a\\01'::STRING::BYTEA
+
+subtest Regression_27950
+
+statement ok
+set bytea_output = hex
+
+statement ok
+CREATE TABLE t(b BYTES); INSERT INTO t(b) VALUES ('\xe697a5e69cace8aa9e'::BYTES)
+
+query TT
+SELECT b, b::STRING FROM t
+----
+日本語  \xe697a5e69cace8aa9e
+
+statement ok
+set bytea_output = escape
+
+query TT
+SELECT b, b::STRING FROM t
+----
+日本語  \346\227\245\346\234\254\350\252\236
+
+statement ok
+DROP TABLE t
